--- a/index.html
+++ b/index.html
@@ -2,16 +2,41 @@
 <html>
 <head>
     <title></title>
+
+    <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
+
+</head>
 </head>
 <body>
 
+    <div id="root"></div>
 
-  <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <script type="text/babel">
 
-  <script src="http://unpkg.com/babel-standalone"></script>
+        class searchBar extends React.Component {
+            render() {
+                return (
+                    <div className="App">
+                        <h1>Hello!</h1>
+                    </div>
+                );
+            }
+        }
 
-  <script src="hello.jsx" type="text/jsx"></script>
-  <script src="index.jsx" type="text/jsx"></script>
+        const TableHeader = () => {
+            return (
+                <thead>
+                    <tr>
+                        <th>Hi</th>
+                    </tr>
+                </thead>
+            )
+        }
+
+        ReactDOM.render(<App />, document.getElementById('root'));
+    </script>
+
 </body>
 </html>
